k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: applications
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: tranzor.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tranzor-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tranzor-frontend
                port:
                  name: http
    - host: logistica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logistica-frontend
                port:
                  name: http
    - host: chatops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatops-frontend
                port:
                  name: http
